--- a/mp2/frontend/src/pages/login.css
+++ b/mp2/frontend/src/pages/login.css
@@ -12,7 +12,9 @@
     background-image: linear-gradient(79deg, #fcfced, #fcedfc 48%, #ebf6ff);
     display: flex;
     flex-direction: column; 
+    margin:auto;
     padding: 10px 50px 20px;
+    
    
   }
 
@@ -34,23 +36,91 @@
   
   }
   
-  input {
-
-    border: none;
-  
+  .inputs {
+    margin-top: 10px;  
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    
   }
-  
-  button {
+  .input {
+    display: flex;
+    align-items: center;
+    margin: auto;
+    width: 350px;
+    height: 50px;
+    border-radius: 6px;
+    background: #eaeaea;
+  }
+  .input img {
+    margin: 0px 30px;
+    width: 30px;
+    height: 30px;
+  }
+  .input input {
+    height: 50px;
+    width: 400px;
+    background: transparent;
     border: none;
-    background-color: white;
-    padding: 10px;
-    border-radius: 10px;
-    cursor: pointer;
+    outline: none;
+    color:#797979;
+    font-size: 19px;
   }
 
   .red {
     color: red;
   }
-  
-  
-  
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+    width: 100%;
+    margin-top: 30px;
+  }
+  .text {
+    color: #3c009d;
+    font-size: 30px;
+    font-weight: 600;
+  }
+  .underline {
+    width: 61px;
+    height: 6px;
+    background: #3c009d;
+    border-radius: 5px;
+  }
+  .forgot-password{
+    padding-left: 62px;
+    margin-top: 27px;
+    color:#797979;
+    font-size: 18px;
+  }
+  .forgot-password span{
+    color: #4c00b4;
+    cursor: pointer;
+  }
+  .submit-container{
+    display: flex;
+    gap: 30px;
+    margin: 30px auto;
+  }
+  .submit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 130px;
+    height: 40px;
+    color: #fff;
+    background: #268f8e;
+    border-radius: 50px;
+    font-size: 19px;
+    font-weight: 700;
+    cursor: pointer;
+  }
+  .gray{
+    background: #eaeaea;
+    color: #268f8e;
+  }
+  .card:hover {
+    transform: none;
+  }
