--- a/mp2/frontend/src/pages/login.css
+++ b/mp2/frontend/src/pages/login.css
@@ -4,12 +4,13 @@
    align-items: center;  
     justify-content: center; 
     background-image: linear-gradient(79deg, #fcfced, #fcedfc 48%, #ebf6ff);
-   
+   padding-top: 30px;
     padding-bottom: 50px;
+    
   }
   
-  .form-container, .register-form {
-    background-image: linear-gradient(79deg, #fcfced, #fcedfc 48%, #ebf6ff);
+  .form-container {
+    background-image: linear-gradient(50deg, #fcfced, #fcedfc 30%, #ebf6ff);
     display: flex;
     flex-direction: column; 
     margin:auto;
@@ -17,31 +18,13 @@
     
    
   }
-
-  .login-form {
-    display: flex;
-    flex-direction: column; 
-    
-  }
-  
-  .auth-form-container {
- /*   padding: 1rem 3rem;  */
-    border: 1px solid white;
-    border-radius: 10px;
-  
-  }
-  
-  label {
-    text-align: left;
-  
-  }
   
   .inputs {
     margin-top: 10px;  
+    margin-left: -50px;
     display: flex;
     flex-direction: column;
-    gap: 5px;
-    
+    gap: 10px;
   }
   .input {
     display: flex;
@@ -51,9 +34,10 @@
     height: 50px;
     border-radius: 6px;
     background: #eaeaea;
+    
   }
   .input img {
-    margin: 0px 30px;
+    margin: 0px 10px;
     width: 30px;
     height: 30px;
   }
@@ -76,7 +60,7 @@
     align-items: center;
    
     width: 100%;
-    margin-top: 30px;
+    margin-top: 0px;
   }
   .text {
     color: #3c009d;
@@ -92,6 +76,7 @@
   .forgot-password{
     padding-left: 62px;
     margin-top: 27px;
+    margin-left: -60px;
     color:#797979;
     font-size: 18px;
   }
